# rag-hanzon

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: deploy.yml
handson-document/: index.md  package-lock.json  package.json
handson-document/.vitepress/: config.js
handson-document/guide/: preparation.md  setup.md
handson-document/handson/: chat.md  rag.md
src/: chat.py  rag-text.py
src/chat/: step1.py  step2.py
